--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Kosan</string>
+    <string name="app_name">Kosan Subscriber</string>
     <string name="app_name_ext_1">KOS</string>
     <string name="app_name_ext_2">A</string>
     <string name="app_name_ext_3">N</string>
@@ -7,27 +7,33 @@
     <string name="str_date">00/00/0000</string>
     <string name="str_time">00:00:00</string>
 
+    <string name="hint_password">Sandi</string>
+    <string name="hint_email">Email</string>
 
-    <string name="alert_login_invalid_input_title">Kesalahan Input!</string>
-    <string name="alert_login_invalid_input_email">Pastikan format email benar.</string>
-    <string name="alert_login_invalid_input_password">Pastikan sandi lebih dari 5 karakter.</string>
-    <string name="alert_login_positive_btn">Tutup</string>
+    <string name="connecting_to_server">Menghubungi Server</string>
 
-    <string name="activity_login_title">Sign in</string>
-    <string name="activity_login_bt_login">Masuk</string>
-    <string name="activity_login_tx_password_hint">Sandi</string>
-    <string name="activity_login_tx_email_hint">Email</string>
+    <string name="try_again">Coba Lagi</string>
 
+    <!-- start: activity_login -->
+    <string name="login_result_title_login_failed">Login Gagal!</string>
+    <string name="login_result_title_access_expired">Hak Akses Expired!</string>
+    <string name="login_result_title_connection_timeout">Waktu Koneksi Habis!</string>
 
-    <string name="activity_authenticate_connecting_title">Menghubungi Server!</string>
-    <string name="activity_authenticate_connection_failed_title">Login Gagal!</string>
-    <string name="activity_authenticate_connection_failed_message">Kombinasi email dan password tidak terdaftar.</string>
-    <string name="activity_authenticate_no_room_subscription_title">Hak Akses Expired!</string>
-    <string name="activity_authenticate_no_room_subscription_message">Hak Akses telah expired, segera hubungi admin Kosan.</string>
+    <string name="login_result_message_authentication_failed">Kombinasi email dan password tidak terdaftar.</string>
+    <string name="login_result_message_access_expired">Hak Akses telah expired, segera hubungi admin Kosan.</string>
+    <string name="login_result_message_connection_timeout">Periksa kembali koneksi internet. Pastikan perangkat terhubung dengan internet.</string>
 
+    <string name="activity_login_alert_invalid_input_title">Kesalahan Input!</string>
+    <string name="activity_login_alert_invalid_input_email">Pastikan format email benar.</string>
+    <string name="activity_login_alert_invalid_input_password">Pastikan sandi lebih dari 5 karakter.</string>
+    <string name="activity_login_alert_positive_btn">Tutup</string>
+    <!-- end: activity_login -->
+
+    <!-- start: activity_dashboard -->
     <string name="activity_dashboard_fragment_date_tx_date">Tanggal: </string>
-
+    <string name="activity_dashboard_fragment_date_tx_hour">Jam: </string>
     <string name="activity_dashboard_fragment_subscription_title_primary">Periode Sewa:</string>
     <string name="activity_dashboard_fragment_subscription_hour_default">@string/str_time</string>
     <string name="activity_dashboard_fragment_subscription_date_default">@string/str_date</string>
+    <!-- end: activity_dashboard -->
 </resources>
